syntax = "proto3";

package auth;

service AuthService {
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	bool success = 1;
	string token = 2;
}

message RegisterRequest {
	string username = 1;
	string password = 2;
}

message RegisterResponse {
	bool success = 1;
	string message = 2;
}
